src/objects/Currency_Director_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <formula>Currency_Director_Currencies__r.Currency_Director__r.Director_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Director_Currencies__c</fullName>
        <label>Currency Director Currencies</label>
        <referenceTo>Currency_Director_Currencies__c</referenceTo>
        <relationshipLabel>Currency Director Rates</relationshipLabel>
        <relationshipName>Currency_Director_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Latest__c</fullName>
        <formula>If(Effective_Date__c =   Currency_Director_Currencies__r.Currency_Director__r.Latest_related_currency_Effective_Date__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Latest ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Currency Director Rates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_Director_Currencies__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Latest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Currency_Director_Currencies__c</field>
            <operation>notEqual</operation>
            <value>GBP</value>
        </filters>
        <label>Latest Rates to GBP</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Currency Director Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Director Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_rate_does_not_predate_other_rates</fullName>
        <active>true</active>
        <description>Checks that the Exchange Rate Effective Date keyed does not predate an existing exchange rate</description>
        <errorConditionFormula>AND( ISNEW() , Effective_Date__c &lt;=  Currency_Director_Currencies__r.Last_Rate_Update_Date__c )</errorConditionFormula>
        <errorMessage>The new exchange rate (effective date) must fall after the last existing exchange rate record</errorMessage>
    </validationRules>
</CustomObject>